# ATM_simulator

./: .gitignore  .gitmodules  ATM_simulator.cpp  ATM_simulator.h  AccountTest.cpp  AccountTest.h  CMakeLists.txt  CMakePresets.json  CardTest.cpp  CardTest.h  README.md  TransferTest.cpp  conanfile.txt  database.sql  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
ATM-Backend/: CMakeLists.txt  conanfile.txt  main.cpp
ATM-Backend/DTO/: AccountDTO.cpp  AccountDTO.h  TransferDTO.h
ATM-Backend/Entities/: AccountEntity.h  ClientEntity.h  TransferDaemon.cpp
ATM-Backend/Services/: AccountService.cpp  CardService.cpp  ClientService.cpp  TransferService.cpp  TransferService.h
ATM-Backend/Tests/: AccountTest.cpp  TransferTest.cpp  TransferTest.h
ATM-Backend/repositories/: CardRepository.h  ClientRepository.cpp  TransferRepository.cpp
ATM-Backend/utils/: time_utils.h
ATM-Frontend/: CMakeLists.txt  main.cpp
ATM-Frontend/app/: CMakeLists.txt
ATM-Frontend/app/config/: CMakeLists.txt  glfw_config.h  text_config.h  window_config.h
ATM-Frontend/app/util/: CMakeLists.txt
ATM-Frontend/app/util/headers/: glfw_util.h  imgui_util.h
ATM-Frontend/app/util/impl/: glfw_util.cpp  imgui_util.cpp
DTO/: AccountDTO.cpp  AccountDTO.h  CardDTO.cpp  CardDTO.h  ClientDTO.cpp  ClientDTO.h  TransferDTO.cpp  TransferDTO.h
Entities/: AccountEntity.cpp  CardEntity.cpp  CardEntity.h  ClientEntity.cpp  TransferDaemon.cpp  TransferEntity.cpp  TransferEntity.h
Services/: AccountService.cpp  AccountService.h  CardService.cpp  CardService.h  ClientService.cpp  ClientService.h  TransferService.cpp  TransferService.h
Tests/: CardTest.cpp  TransferDaemonTest.h
TestsProject/: AccountTest.cpp  AccountTest.h  CMakeLists.txt  CardTest.cpp  CardTest.h  TestsProject.cpp  TestsProject.h  TransferDaemonTest.h  TransferTest.h  main.cpp
TestsProject/mocks/: AccountMocks.h  CardMocks.h  TransferDaemonMocks.h  TransferMocks.h
TestsProject/utils/: assert_utils.h  time_utils.h
repositories/: AccountRepository.cpp  AccountRepository.h  CardRepository.cpp  CardRepository.h  ClientRepository.cpp  ClientRepository.h  TransferRepository.cpp  TransferRepository.h
utils/: assert_utils.h  time_utils.h
